--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ log:
 spring:
   profiles: local
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/springbootproject?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/customer?useUnicode=true&characterEncoding=utf8
     username: root
     password: root
     filters: wall,mergeStat
@@ -63,7 +63,7 @@ mpen:
 spring:
   profiles: dev
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/springbootproject?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+    url: jdbc:mysql://127.0.0.1:3306/customer?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
     username: root
     password: root
     filters: wall,mergeStat
@@ -82,7 +82,7 @@ mybatis-plus:
 spring:
   profiles: dev_multi
   datasource:
-    url: jdbc:mysql://localhost:3306/springbootproject?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+    url: jdbc:mysql://localhost:3306/customer?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
     username: root
     password: root
     filters: wall,mergeStat
@@ -102,7 +102,7 @@ mybatis-plus:
 spring:
   profiles: dev_notsqllog
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/springbootproject?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+    url: jdbc:mysql://127.0.0.1:3306/customer?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
     username: root
     password: root
     filters: wall,mergeStat
