--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ guns:
   swagger-open: true              #是否开启swagger (true/false)
   kaptcha-open: false             #是否开启登录时验证码 (true/false)
   spring-session-open: false      #是否开启spring session,如果是多机环境需要开启(true/false)
-  file-upload-path: D:\file   #文件上传目录(不配置的话为java.io.tmpdir目录)D:\develop\apache-tomcat-8.5.9\webapps\ROOT\file  &&/usr/local/diruicloud/file
+  file-upload-path: D:\file   #文件上传目录(不配置的话为java.io.tmpdir目录)D:\file  &&/usr/local/customer/file
   session-invalidate-time: 1800     #session失效时间(只在单机环境下生效，多机环境在SpringSessionConfig类中配置) 单位：秒
   session-validation-interval: 900  #多久检测一次失效的session(只在单机环境下生效) 单位：秒
 
@@ -105,6 +105,23 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/customer?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
     username: root
     password: root
+    filters: wall,mergeStat
+  redis:
+    #单机模式
+    host: 127.0.0.1
+    port: 6379
+
+mybatis-plus:
+  typeAliasesPackage: com.boot.modular.system.model
+
+---
+#生产环境
+spring:
+  profiles: producer
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/customer?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&allowPublicKeyRetrieval=true
+    username: root
+    password: Tx122596.
     filters: wall,mergeStat
   redis:
     #单机模式
